--- a/package.json
+++ b/package.json
@@ -1,8 +1,7 @@
 {
-  "name": "catreads",
+  "name": "fatimaberro",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://fatimaberro.github.io/CatReads",
   "dependencies": {
     "@emotion/react": "^11.14.0",
     "@emotion/styled": "^11.14.1",
@@ -22,8 +21,6 @@
   "scripts": {
     "start": "react-scripts start",
     "build": "react-scripts build",
-    "predeploy": "npm run build",
-    "deploy": "gh-pages -d build",
     "test": "react-scripts test",
     "eject": "react-scripts eject"
   },
@@ -44,8 +41,5 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
-  },
-  "devDependencies": {
-    "gh-pages": "^6.3.0"
   }
 }
